{
  "version": 4,
  "terraform_version": "1.14.7",
  "serial": 35,
  "lineage": "1bd90501-20cf-aeeb-5c9e-845febd5a74e",
  "resources": [
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a0de4e300ddad5ac",
            "arn": "arn:aws:ec2:us-east-1:816781470469:elastic-ip/eipalloc-0a0de4e300ddad5ac",
            "association_id": "eipassoc-0897e228e765b63c3",
            "domain": "vpc",
            "id": "eipalloc-0a0de4e300ddad5ac",
            "network_border_group": "us-east-1",
            "network_interface": "eni-04f05e66af081623f",
            "private_dns": "ip-10-0-0-10.ec2.internal",
            "private_ip": "10.0.0.10",
            "public_dns": "ec2-35-173-164-218.compute-1.amazonaws.com",
            "public_ip": "35.173.164.218",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "shared",
              "ManagedBy": "terraform",
              "Name": "blend360-interview-shared-nat-eip-1",
              "Project": "blend360-interview"
            },
            "tags_all": {
              "Environment": "shared",
              "ManagedBy": "terraform",
              "Name": "blend360-interview-shared-nat-eip-1",
              "Project": "blend360-interview"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_internet_gateway.main",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:816781470469:internet-gateway/igw-0cec24663ec4f1ad9",
            "id": "igw-0cec24663ec4f1ad9",
            "owner_id": "816781470469",
            "tags": {
              "Environment": "shared",
              "ManagedBy": "terraform",
              "Name": "blend360-interview-shared-igw",
              "Project": "blend360-interview"
            },
            "tags_all": {
              "Environment": "shared",
              "ManagedBy": "terraform",
              "Name": "blend360-interview-shared-igw",
              "Project": "blend360-interview"
            },
            "vpc_id": "vpc-02c6c1a5b2392635e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a0de4e300ddad5ac",
            "association_id": "eipassoc-0897e228e765b63c3",
            "connectivity_type": "public",
            "id": "nat-0e2a593ca229f4457",
            "network_interface_id": "eni-04f05e66af081623f",
            "private_ip": "10.0.0.10",
            "public_ip": "35.173.164.218",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-069cddba1edbdebb8",
            "tags": {
              "Environment": "shared",
              "ManagedBy": "terraform",
              "Name": "blend360-interview-shared-nat-1",
              "Project": "blend360-interview"
            },
            "tags_all": {
              "Environment": "shared",
              "ManagedBy": "terraform",
              "Name": "blend360-interview-shared-nat-1",
              "Project": "blend360-interview"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_eip.nat",
            "module.networking.aws_internet_gateway.main",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:816781470469:route-table/rtb-02626d5454ec855b5",
            "id": "rtb-02626d5454ec855b5",
            "owner_id": "816781470469",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0e2a593ca229f4457",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "shared",
              "ManagedBy": "terraform",
              "Name": "blend360-interview-shared-private-rt-1",
              "Project": "blend360-interview"
            },
            "tags_all": {
              "Environment": "shared",
              "ManagedBy": "terraform",
              "Name": "blend360-interview-shared-private-rt-1",
              "Project": "blend360-interview"
            },
            "timeouts": null,
            "vpc_id": "vpc-02c6c1a5b2392635e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_eip.nat",
            "module.networking.aws_internet_gateway.main",
            "module.networking.aws_nat_gateway.main",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:816781470469:route-table/rtb-05c9d80347eb10317",
            "id": "rtb-05c9d80347eb10317",
            "owner_id": "816781470469",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0e2a593ca229f4457",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "shared",
              "ManagedBy": "terraform",
              "Name": "blend360-interview-shared-private-rt-2",
              "Project": "blend360-interview"
            },
            "tags_all": {
              "Environment": "shared",
              "ManagedBy": "terraform",
              "Name": "blend360-interview-shared-private-rt-2",
              "Project": "blend360-interview"
            },
            "timeouts": null,
            "vpc_id": "vpc-02c6c1a5b2392635e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_eip.nat",
            "module.networking.aws_internet_gateway.main",
            "module.networking.aws_nat_gateway.main",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:816781470469:route-table/rtb-01710d91f1cee1faa",
            "id": "rtb-01710d91f1cee1faa",
            "owner_id": "816781470469",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0e2a593ca229f4457",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "shared",
              "ManagedBy": "terraform",
              "Name": "blend360-interview-shared-private-rt-3",
              "Project": "blend360-interview"
            },
            "tags_all": {
              "Environment": "shared",
              "ManagedBy": "terraform",
              "Name": "blend360-interview-shared-private-rt-3",
              "Project": "blend360-interview"
            },
            "timeouts": null,
            "vpc_id": "vpc-02c6c1a5b2392635e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_eip.nat",
            "module.networking.aws_internet_gateway.main",
            "module.networking.aws_nat_gateway.main",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:816781470469:route-table/rtb-02a4769e95fd231cc",
            "id": "rtb-02a4769e95fd231cc",
            "owner_id": "816781470469",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0cec24663ec4f1ad9",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "shared",
              "ManagedBy": "terraform",
              "Name": "blend360-interview-shared-public-rt",
              "Project": "blend360-interview"
            },
            "tags_all": {
              "Environment": "shared",
              "ManagedBy": "terraform",
              "Name": "blend360-interview-shared-public-rt",
              "Project": "blend360-interview"
            },
            "timeouts": null,
            "vpc_id": "vpc-02c6c1a5b2392635e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_internet_gateway.main",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f9798bd95b4b9690",
            "route_table_id": "rtb-02626d5454ec855b5",
            "subnet_id": "subnet-0fa225b625b56c476"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_eip.nat",
            "module.networking.aws_internet_gateway.main",
            "module.networking.aws_nat_gateway.main",
            "module.networking.aws_route_table.private",
            "module.networking.aws_subnet.private",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09d0b1ae3480153f2",
            "route_table_id": "rtb-05c9d80347eb10317",
            "subnet_id": "subnet-024254f7a11449029"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_eip.nat",
            "module.networking.aws_internet_gateway.main",
            "module.networking.aws_nat_gateway.main",
            "module.networking.aws_route_table.private",
            "module.networking.aws_subnet.private",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0636640e5d65fab00",
            "route_table_id": "rtb-01710d91f1cee1faa",
            "subnet_id": "subnet-0cc0f64b202e88699"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_eip.nat",
            "module.networking.aws_internet_gateway.main",
            "module.networking.aws_nat_gateway.main",
            "module.networking.aws_route_table.private",
            "module.networking.aws_subnet.private",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a8d39a41262d77a3",
            "route_table_id": "rtb-02a4769e95fd231cc",
            "subnet_id": "subnet-069cddba1edbdebb8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_internet_gateway.main",
            "module.networking.aws_route_table.public",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01dc71554aaa9b87e",
            "route_table_id": "rtb-02a4769e95fd231cc",
            "subnet_id": "subnet-0736f469bd0e9dde9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_internet_gateway.main",
            "module.networking.aws_route_table.public",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02ee2a8d2d93f6852",
            "route_table_id": "rtb-02a4769e95fd231cc",
            "subnet_id": "subnet-0efbe70741071826c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_internet_gateway.main",
            "module.networking.aws_route_table.public",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:816781470469:security-group/sg-05c022d9e21f6f199",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05c022d9e21f6f199",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "blend360-interview-shared-alb-20251109141658040700000001",
            "name_prefix": "blend360-interview-shared-alb-",
            "owner_id": "816781470469",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "shared",
              "ManagedBy": "terraform",
              "Name": "blend360-interview-shared-alb-sg",
              "Project": "blend360-interview"
            },
            "tags_all": {
              "Environment": "shared",
              "ManagedBy": "terraform",
              "Name": "blend360-interview-shared-alb-sg",
              "Project": "blend360-interview"
            },
            "timeouts": null,
            "vpc_id": "vpc-02c6c1a5b2392635e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "deposed": "c8f57f3f",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:816781470469:security-group/sg-05660bc34a256cb9c",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05660bc34a256cb9c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "blend360-interview-dev-alb-20250807114752462400000005",
            "name_prefix": "blend360-interview-dev-alb-",
            "owner_id": "816781470469",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "blend360-interview-dev-alb-sg",
              "Project": "blend360-interview"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "blend360-interview-dev-alb-sg",
              "Project": "blend360-interview"
            },
            "timeouts": null,
            "vpc_id": "vpc-02c6c1a5b2392635e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "module.networking.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:816781470469:subnet/subnet-0fa225b625b56c476",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fa225b625b56c476",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "816781470469",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "shared",
              "ManagedBy": "terraform",
              "Name": "blend360-interview-shared-private-1",
              "Project": "blend360-interview",
              "Type": "private"
            },
            "tags_all": {
              "Environment": "shared",
              "ManagedBy": "terraform",
              "Name": "blend360-interview-shared-private-1",
              "Project": "blend360-interview",
              "Type": "private"
            },
            "vpc_id": "vpc-02c6c1a5b2392635e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:816781470469:subnet/subnet-024254f7a11449029",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-024254f7a11449029",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "816781470469",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "shared",
              "ManagedBy": "terraform",
              "Name": "blend360-interview-shared-private-2",
              "Project": "blend360-interview",
              "Type": "private"
            },
            "tags_all": {
              "Environment": "shared",
              "ManagedBy": "terraform",
              "Name": "blend360-interview-shared-private-2",
              "Project": "blend360-interview",
              "Type": "private"
            },
            "vpc_id": "vpc-02c6c1a5b2392635e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:816781470469:subnet/subnet-0cc0f64b202e88699",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cc0f64b202e88699",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "816781470469",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "shared",
              "ManagedBy": "terraform",
              "Name": "blend360-interview-shared-private-3",
              "Project": "blend360-interview",
              "Type": "private"
            },
            "tags_all": {
              "Environment": "shared",
              "ManagedBy": "terraform",
              "Name": "blend360-interview-shared-private-3",
              "Project": "blend360-interview",
              "Type": "private"
            },
            "vpc_id": "vpc-02c6c1a5b2392635e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:816781470469:subnet/subnet-069cddba1edbdebb8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-069cddba1edbdebb8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "816781470469",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "shared",
              "ManagedBy": "terraform",
              "Name": "blend360-interview-shared-public-1",
              "Project": "blend360-interview",
              "Type": "public"
            },
            "tags_all": {
              "Environment": "shared",
              "ManagedBy": "terraform",
              "Name": "blend360-interview-shared-public-1",
              "Project": "blend360-interview",
              "Type": "public"
            },
            "vpc_id": "vpc-02c6c1a5b2392635e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:816781470469:subnet/subnet-0736f469bd0e9dde9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0736f469bd0e9dde9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "816781470469",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "shared",
              "ManagedBy": "terraform",
              "Name": "blend360-interview-shared-public-2",
              "Project": "blend360-interview",
              "Type": "public"
            },
            "tags_all": {
              "Environment": "shared",
              "ManagedBy": "terraform",
              "Name": "blend360-interview-shared-public-2",
              "Project": "blend360-interview",
              "Type": "public"
            },
            "vpc_id": "vpc-02c6c1a5b2392635e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:816781470469:subnet/subnet-0efbe70741071826c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0efbe70741071826c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "816781470469",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "shared",
              "ManagedBy": "terraform",
              "Name": "blend360-interview-shared-public-3",
              "Project": "blend360-interview",
              "Type": "public"
            },
            "tags_all": {
              "Environment": "shared",
              "ManagedBy": "terraform",
              "Name": "blend360-interview-shared-public-3",
              "Project": "blend360-interview",
              "Type": "public"
            },
            "vpc_id": "vpc-02c6c1a5b2392635e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:816781470469:vpc/vpc-02c6c1a5b2392635e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-05b263d4cf977fc94",
            "default_route_table_id": "rtb-061e6bbb4d53fc764",
            "default_security_group_id": "sg-0489381f98ad1ee1e",
            "dhcp_options_id": "dopt-0ff8c30b266766b80",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-02c6c1a5b2392635e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-061e6bbb4d53fc764",
            "owner_id": "816781470469",
            "tags": {
              "Environment": "shared",
              "ManagedBy": "terraform",
              "Name": "blend360-interview-shared-vpc",
              "Project": "blend360-interview"
            },
            "tags_all": {
              "Environment": "shared",
              "ManagedBy": "terraform",
              "Name": "blend360-interview-shared-vpc",
              "Project": "blend360-interview"
            }
          },
          "identity_schema_version": 0,
          "create_before_destroy": true
        }
      ]
    }
  ]
}